Modificaciones funcionalidad login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,12 @@ exception.horas.insuficientes=El trabajador no tiene suficientes horas disponibl
 exception.integridad.datos=Error de integridad de datos
 exception.validacion.errores=Errores de validación
 exception.notfound.asignacion=Asignación con trabajadorId: {0} y seccionId: {1} no encontrada
+
+# Autenticación
+auth.username.obligatorio=El nombre de usuario es obligatorio
+auth.username.tamano=El nombre de usuario debe tener entre {min} y {max} caracteres
+auth.password.obligatorio=La contraseña es obligatoria
+auth.password.tamano=La contraseña debe tener al menos {min} caracteres
+auth.token.requerido=Se requiere autenticación. Por favor, proporcione un token válido
+auth.credenciales.invalidas=Usuario o contraseña incorrectos
+
