--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,3 +22,11 @@ exception.horas.insuficientes=Worker does not have enough available hours. Avail
 exception.integridad.datos=Data integrity error
 exception.validacion.errores=Validation errors
 exception.notfound.asignacion=Assignment with workerId: {0} and sectionId: {1} not found
+
+# Authentication
+auth.username.obligatorio=Username is required
+auth.username.tamano=Username must be between {min} and {max} characters
+auth.password.obligatorio=Password is required
+auth.password.tamano=Password must be at least {min} characters
+auth.token.requerido=Authentication required. Please provide a valid token
+auth.credenciales.invalidas=Invalid username or password
