Creación lógica para poder cambiar contraseña

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,8 @@ exception.notfound.asignacion=Asignación con trabajadorId: {0} y seccionId: {1}
 auth.username.obligatorio=El nombre de usuario es obligatorio
 auth.username.tamano=El nombre de usuario debe tener entre {min} y {max} caracteres
 auth.password.obligatorio=La contraseña es obligatoria
+auth.cambiarPassword.nueva.obligatorio=La nueva contraseña es obligatoria
+auth.cambiarPassword.actual.obligatorio=La actual contraseña es obligatoria
 auth.password.tamano=La contraseña debe tener al menos {min} caracteres
 auth.token.requerido=Se requiere autenticación. Por favor, proporcione un token válido
 auth.credenciales.invalidas=Usuario o contraseña incorrectos
