Gestion mensajes excepcion DuplicadoException

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,4 +32,5 @@ auth.cambiarPassword.actual.obligatorio=La actual contraseña es obligatoria
 auth.password.tamano=La contraseña debe tener al menos {min} caracteres
 auth.token.requerido=Se requiere autenticación. Por favor, proporcione un token válido
 auth.credenciales.invalidas=Usuario o contraseña incorrectos
+auth.user.yaExiste=El usuario ya existe: {0}
 
