Actualiza mensajes de messasges.properties en inglés

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,7 +7,7 @@ trabajador.dni.obligatorio=DNI is required
 trabajador.dni.tamano=DNI must have {max} characters
 trabajador.horas.obligatorio=Available hours are required
 trabajador.horas.min=Available hours must be at least {value}
-trabajador.horas.max=Available hours cannot be more than {value}
+trabajador.horas.max=Available hours cannot exceed {value}
 
 # Validations - Assignment
 asignacion.seccion.obligatorio=Section id is required
@@ -27,6 +27,9 @@ exception.notfound.asignacion=Assignment with workerId: {0} and sectionId: {1} n
 auth.username.obligatorio=Username is required
 auth.username.tamano=Username must be between {min} and {max} characters
 auth.password.obligatorio=Password is required
-auth.password.tamano=Password must be at least {min} characters
+auth.cambiarPassword.nueva.obligatorio=New password is required
+auth.cambiarPassword.actual.obligatorio=Current password is required
+auth.password.tamano=Password must be at least {min} characters long
 auth.token.requerido=Authentication required. Please provide a valid token
 auth.credenciales.invalidas=Invalid username or password
+auth.user.yaExiste=User already exists: {0}
